--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 Hello World
 
-Hello World2
+<br>
+<a href="reads.html"> Further reading</a></br>
+<a href="blog.html"> Blogs</a></br>
+<a href="confrences.html">Confrences</a><br>
+<a href="optimizations.html">Optimizations</a><br>
 
-<a href="https://www.usenix.org/system/files/conference/hotcloud16/hotcloud16_burns.pdf">hotcloud16_burns</a>
-
+<a href="https://www.covid19india.org/">Covid</a><br>
 </html>
 
 
