--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ Hello World
 <a href="confrences.html">Confrences</a><br>
 <a href="optimizations.html">Optimizations</a><br>
 
+<a href="newsite/index.html">NewSite</a>
+
 <a href="https://www.covid19india.org/">Covid</a><br>
 </html>
 
